--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <%= render PageComponent.new(title: "Forgot your password?") do %>
 
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "space-y-4" }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= render "shared/errors", object: resource %>
 
     <div class="field">
       <%= f.label :email %><br />
