--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render PageComponent.new(title: "Edit #{resource_name.to_s.humanize}") do %>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-4" }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= render "shared/errors", object: resource %>
 
     <div class="field">
       <%= f.label :email %><br />
