--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class="du-alert du-alert-error">
+  <div id="error_explanation" class="du-alert du-alert-error" data-turbo-cache="false">
     <div>
       <h2><%= pluralize(object.errors.count, "error") %> prohibited this object from being saved:</h2>
 
