--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,18 +1,21 @@
 <%= render PageComponent.new(title: "Resend confirmation instructions") do %>
 
-  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, class: "space-y-4" }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post, class: "space-y-6" }) do |f| %>
     <%= render "shared/errors", object: resource %>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-input" %>
+    <div class="space-y-2">
+      <%= f.label :email, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-input", placeholder: "Enter your email" %>
+      <p class="text-xs text-gray-500 mt-1">We'll send you a new confirmation email</p>
     </div>
 
-    <div class="">
-      <%= f.submit "Resend confirmation instructions", class: "du-btn du-btn-primary" %>
+    <div class="pt-4">
+      <%= f.submit "Resend confirmation instructions", class: "du-btn du-btn-primary du-btn-block" %>
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="mt-6 pt-6 border-t border-gray-200 dark:border-gray-700 text-center space-y-2">
+    <%= render "devise/shared/links" %>
+  </div>
 
 <% end %>
