--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,27 +1,29 @@
 <%= render PageComponent.new(title: "Change your password") do %>
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "space-y-4" }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
     <%= render "shared/errors", object: resource %>
     <%= f.hidden_field :reset_password_token %>
 
-    <div class="field">
-      <%= f.label :password, "New password" %><br />
+    <div class="space-y-2">
+      <%= f.label :password, "New password", class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
       <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <p class="text-xs text-gray-500 mt-1">(<%= @minimum_password_length %> characters minimum)</p>
       <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-input" %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-input", placeholder: "Enter new password" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation, "Confirm new password" %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input" %>
+    <div class="space-y-2">
+      <%= f.label :password_confirmation, "Confirm new password", class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input", placeholder: "Confirm new password" %>
     </div>
 
-    <div class="">
-      <%= f.submit "Change my password", class: "du-btn du-btn-primary" %>
+    <div class="pt-4">
+      <%= f.submit "Change my password", class: "du-btn du-btn-primary du-btn-block" %>
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="mt-6 pt-6 border-t border-gray-200 dark:border-gray-700 text-center space-y-2">
+    <%= render "devise/shared/links" %>
+  </div>
 
 <% end %>
