--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,32 @@
 <%= render PageComponent.new(title: "Sign up") do %>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-4" }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-6" }) do |f| %>
     <%= render "shared/errors", object: resource %>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-input" %>
+    <div class="space-y-2">
+      <%= f.label :email, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-input", placeholder: "Enter your email" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password %>
+    <div class="space-y-2">
+      <%= f.label :password, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
       <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-input" %>
+        <p class="text-xs text-gray-500 mt-1">(<%= @minimum_password_length %> characters minimum)</p>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "form-input", placeholder: "Create a password" %>
     </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input" %>
+    <div class="space-y-2">
+      <%= f.label :password_confirmation, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input", placeholder: "Confirm your password" %>
     </div>
 
-    <div class="">
-      <%= f.submit "Sign up", class: "du-btn du-btn-primary" %>
+    <div class="pt-4">
+      <%= f.submit "Sign up", class: "du-btn du-btn-primary du-btn-block" %>
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="mt-6 pt-6 border-t border-gray-200 dark:border-gray-700 text-center space-y-2">
+    <%= render "devise/shared/links" %>
+  </div>
 <% end %>
