--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,24 +1,24 @@
-<%= render PageComponent.new(title: "Change your password") do %>
+<%= render PageComponent.new(title: t("devise.views.passwords.edit.title")) do %>
 
   <%= form_with model: resource, as: resource_name, url: password_path(resource_name), method: :put, class: "space-y-6" do |f| %>
     <%= render "shared/errors", object: resource %>
     <%= f.hidden_field :reset_password_token %>
 
     <div class="space-y-2">
-      <%= f.label :password, "New password", class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
+      <%= f.label :password, t("devise.views.passwords.edit.password_label"), class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
       <% if @minimum_password_length %>
-        <p class="text-xs text-gray-500 mt-1">(<%= @minimum_password_length %> characters minimum)</p>
+        <p class="text-xs text-gray-500 mt-1"><%= t("devise.views.passwords.edit.password_minimum", count: @minimum_password_length) %></p>
       <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-input", placeholder: "Enter new password" %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-input", placeholder: t("devise.views.passwords.edit.password_placeholder") %>
     </div>
 
     <div class="space-y-2">
-      <%= f.label :password_confirmation, "Confirm new password", class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input", placeholder: "Confirm new password" %>
+      <%= f.label :password_confirmation, t("devise.views.passwords.edit.password_confirmation_label"), class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input", placeholder: t("devise.views.passwords.edit.password_confirmation_placeholder") %>
     </div>
 
     <div class="pt-4">
-      <%= f.submit "Change my password", class: "du-btn du-btn-primary du-btn-block" %>
+      <%= f.submit t("devise.views.passwords.edit.submit"), class: "du-btn du-btn-primary du-btn-block" %>
     </div>
   <% end %>
 
