--- a/app/views/organizations/memberships/index.html.erb
+++ b/app/views/organizations/memberships/index.html.erb
@@ -3,7 +3,9 @@
 <%= render "organizations/memberships/tabs", active_tab: :memberships do %>
   <%= render PageComponent.new(title: t("organizations.memberships.index.title"), full_width: true) do |component| %>
     <% component.with_action_list do %>
-      <%= link_to t("organizations.memberships.new.title"), new_organization_invitation_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" if policy(@organization.memberships.new).new? %>
+      <% if b2b_enabled? %>
+        <%= link_to t("organizations.memberships.new.title"), new_organization_invitation_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" if policy(@organization.memberships.new).new? %>
+      <% end %>
     <% end %>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-4">
