--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -3,7 +3,9 @@
 <%= render "organizations/tabs", active_tab: :my_organizations do %>
   <%= render PageComponent.new(title: t("organizations.index.title"), full_width: true) do |component| %>
     <% component.with_action_list do %>
-      <%= link_to t("shared.actions.new"), new_organization_path, data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" %>
+      <% if b2b_enabled? %>
+        <%= link_to t("shared.actions.new"), new_organization_path, data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" %>
+      <% end %>
     <% end %>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-4">
