--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -10,12 +10,8 @@
       <span class="du-dock-label">Projects</span>
     <% end %>
   <% else %>
-    <%= active_link_to public_organizations_path, active: :exclusive, class_active: "du-dock-active", class: "" do %>
-      🧭
-      <span class="du-dock-label">Discover</span>
-    <% end %>
     <%= active_link_to organizations_path, active: :exclusive, class_active: "du-dock-active", class: "" do %>
-      🏠
+      <%= inline_svg_tag "svg/globe-europe-africa.svg", class: "size-[1.2em]" %>
       <span class="du-dock-label"><%= t("organizations.index.title") %></span>
     <% end %>
   <% end %>
