--- a/app/views/users/connected_accounts/index.html.erb
+++ b/app/views/users/connected_accounts/index.html.erb
@@ -10,12 +10,10 @@
       <% end %>
     </div>
   <% else %>
-    <div class="border border-base-content/20 p-6 rounded-lg">
-      <div class="text-center py-8">
-        <div class="text-4xl mb-3">🔗</div>
-        <p class="text-base-content/70 mb-4">You haven't connected any OAuth accounts yet.</p>
-        <p class="text-sm text-base-content/60">Connect your accounts to enable seamless authentication.</p>
-      </div>
+    <div class="border border-base-content/20 p-6 rounded-lg text-center">
+      <div class="text-4xl mb-3">🔗</div>
+      <p class="text-base-content/70 mb-4">You haven't connected any OAuth accounts yet.</p>
+      <p class="text-sm text-base-content/60">Connect your accounts to enable seamless authentication.</p>
     </div>
   <% end %>
 
