simple option to open modal as a side right drawer

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= render PageComponent.new(title: t("organizations.show.title"), full_width: true) do |component| %>
   <% component.with_action_list do %>
-    <%= link_to t("shared.actions.edit"), edit_organization_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-secondary du-btn-sm" if policy(@organization).edit? %>
+    <%= link_to t("shared.actions.edit"), edit_organization_path(@organization, drawer: true), data: { turbo_frame: :modal }, class: "du-btn du-btn-secondary du-btn-sm" if policy(@organization).edit? %>
     <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-error du-btn-sm" if @organization.can_transfer?(current_user) %>
     <div class="inline-block">
       <%= button_to t("shared.actions.destroy"), @organization, method: :delete, data: { turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error du-btn-sm" if policy(@organization).destroy? %>
