--- a/app/views/connected_accounts/_connected_account.html.erb
+++ b/app/views/connected_accounts/_connected_account.html.erb
@@ -1,22 +1,11 @@
 <div class="border border-base-content/20 p-3 rounded-lg flex items-center justify-between hover:bg-base-200">
   <div class="flex items-center gap-3">
     <div class="text-2xl">
-      <% case connected_account.provider %>
-      <% when 'google_oauth2' %>
-        🔍
-      <% when 'github' %>
-        🐙
-      <% when 'facebook' %>
-        📘
-      <% when 'twitter' %>
-        🐦
-      <% else %>
-        🔗
-      <% end %>
+      <%= ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:icon] %>
     </div>
     <div>
       <div class="font-medium">
-        <%= OmniAuth::Utils.camelize(connected_account.provider) %>
+        <%= ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:name] %>
       </div>
       <div class="text-sm text-base-content/70">
         Connected <%= time_ago_in_words(connected_account.created_at) %> ago
