--- a/app/views/users/connected_accounts/_connected_account.html.erb
+++ b/app/views/users/connected_accounts/_connected_account.html.erb
@@ -2,16 +2,22 @@
   <div class="flex items-center gap-3">
     <div class="text-2xl">
       <% if connected_account.image_url.present? %>
-        <img src="<%= connected_account.image_url %>" alt="<%= connected_account.name %>" class="w-8 h-8 rounded-full">
+        <%= image_tag connected_account.image_url, alt: connected_account.name || ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:name], class: "w-8 h-8 rounded-full" %>
       <% else %>
         <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:icon]}.svg", class: "w-8 h-8" %>
       <% end %>
     </div>
     <div>
-      <div class="font-medium">
-        <%= connected_account.name || ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:name] %>
+      <% if connected_account.name.present? %>
+        <div class="font-medium">
+          <%= connected_account.name %>
+        </div>
+      <% end %>
+      <div class="font-medium flex items-center gap-2">
+        <%= inline_svg_tag "svg/#{ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:icon]}.svg", class: "w-4 h-4" %>
+        <%= ConnectedAccount::PROVIDER_CONFIG[connected_account.provider.to_sym][:name] %>
       </div>
-      <div class="text-sm text-base-content/70">
+      <div class="text-sm text-base-content">
         Connected <%= time_ago_in_words(connected_account.created_at) %> ago
       </div>
     </div>
